# miniagent

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval/: aggregate.py  results.json  run_eval.py  tasks.json
examples/: mcp_demo_server.py
miniagent/: __init__.py  agent.py  executor.py  llm.py  mcp.py  prompts.py  safety.py  server.py  stats.py  tools.py  trace.py
tests/: test_agent_loop.py  test_compaction.py  test_executor.py  test_llm.py  test_mcp.py  test_safety.py  test_server.py  test_stats.py  test_tools.py
viewer/: index.html  sample_run.json
